# murmur-ai

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  RELEASING.md  SECURITY.md  docs.md  mkdocs.yml  pyproject.toml
.beads/: metadata.json
.beads/hooks/: pre-commit
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: changelog.md  contributing.md  index.md  security.md
docs/api/: agent.md  client.md  context.md  errors.md  events.md  groups.md  index.md  interop.md  mcp_server.md  middleware.md  models.md  protocols.md  providers.md  runs.md  runtime.md  server.md  tools.md  worker.md
docs/concepts/: agents.md  architecture.md  backends.md  coordination.md  cost.md  events.md  mcp.md  models-and-providers.md  runtime.md  tools.md
docs/getting-started/: installation.md  quickstart.md
docs/guides/: distributed.md  embedded.md  migration-asyncio.md  migration-faststream.md  migration-pydantic-ai.md  migration.md
examples/: README.md  agent_team.py  cost_budget.py  dashboard_demo.py  distributed.py  embedded.py  events_dashboard.py  mcp.py  mcp_server.py  memory_via_tool.py  quickstart.py  spawn_agents.py  worker_concurrency.py
scripts/: murmuration.py
specs/: README.md
specs/agents/: researcher.yaml
src/murmur/: __init__.py  _dispatch.py  _sync.py  agent.py  messages.py  models.py  providers.py  runs.py  runtime.py  templates.py  types.py
src/murmur/backends/: __init__.py  _brokers.py  _collector.py  _faststream_broker.py  _inmemory_broker.py  async_backend.py  job.py  thread.py
src/murmur/cli/: __init__.py  _reload.py  _uvloop.py  run.py  serve.py  status.py  validate.py  worker.py
src/murmur/client/: __init__.py  local.py
src/murmur/context/: __init__.py  full.py  null.py
src/murmur/core/: __init__.py  errors.py  pipeline.py
src/murmur/core/protocols/: __init__.py  backend.py  broker.py  context.py  event_store.py  events.py  pipeline.py  registry.py  router.py  tools.py  toolsets.py  worker.py
src/murmur/events/: __init__.py  broker.py  log.py  multi.py  otel.py  sse.py  types.py
src/murmur/events/store/: __init__.py  emitter.py  memory.py  sqlite.py  tools.py  usage.py
src/murmur/examples/: __init__.py  types.py
src/murmur/groups/: __init__.py  _introspection.py  edge.py  runner.py  spec.py  team.py  team_runner.py
src/murmur/interop/: __init__.py  faststream.py  pydantic_ai.py
src/murmur/mcp_server/: __init__.py  _bridge.py  _enrollment.py  _server.py
src/murmur/middleware/: __init__.py  cost_tracking.py  depth_limit.py  retry.py  timeout.py
src/murmur/registry/: __init__.py  _yaml_schema.py  memory.py  yaml.py
src/murmur/routing/: __init__.py  always_single.py
src/murmur/runs/: __init__.py  _serde.py  redis.py  rocksdb.py  sqlite.py
src/murmur/server/: __init__.py  app.py  errors.py  router.py  runs_page.py  stats.py
src/murmur/tools/: __init__.py  executor.py  mcp.py  registry.py  spawn.py
src/murmur/tools/builtin/: __init__.py  web_search.py
src/murmur/worker/: __init__.py  worker.py
src/murmur_client/: __init__.py  client.py
tests/: conftest.py  test_agent_builtin_tools.py  test_agent_concurrency_limit.py  test_agent_fallback_models.py  test_agent_mcp.py  test_agent_model_instance.py  test_agent_model_settings.py  test_collector.py  test_dispatch_mcp.py  test_examples_smoke.py  test_inmemory_broker.py  test_messages.py  test_runs.py  test_runtime.py  test_runtime_cascading.py  test_runtime_mcp_eager_start.py  test_signed_envelopes.py  test_templates.py  test_types.py
tests/backends/: test_async_backend.py  test_brokers.py  test_faststream_broker.py  test_job.py  test_thread.py
tests/cli/: test_reload.py  test_run.py  test_serve.py  test_status.py  test_uvloop.py  test_validate.py  test_worker.py
tests/client/: test_auth.py  test_client.py  test_local.py
tests/context/: test_full.py  test_null.py
tests/contracts/: README.md  backend_contract.py  context_passer_contract.py  event_emitter_contract.py  registry_contract.py  runstore_contract.py  toolset_provider_contract.py
tests/core/: test_errors.py  test_pipeline.py  test_protocols_toolsets.py
tests/events/: __init__.py  test_broker.py  test_log.py  test_multi.py  test_otel.py  test_sse.py  test_types.py  test_wiring.py
tests/events/store/: test_contract.py  test_tools.py  test_usage.py
tests/groups/: test_introspection.py  test_runner.py  test_spec.py  test_team.py  test_team_dispatch.py
tests/integration/: test_event_bridge.py  test_faststream_pipeline.py  test_real_brokers.py  test_research_pipeline.py
tests/interop/: test_faststream.py  test_pydantic_ai.py
tests/mcp_server/: _stub_server.py  test_enrollment_and_bridge.py  test_fastmcp_construction.py  test_http_auth.py  test_stdio_e2e.py
tests/middleware/: test_cost_tracking.py  test_depth_limit.py  test_retry.py  test_timeout.py
tests/registry/: _yaml_fixtures.py  test_memory.py  test_yaml.py
tests/routing/: test_always_single.py
tests/runs/: test_redis.py  test_rocksdb.py  test_sqlite.py
tests/server/: test_app.py  test_auth.py  test_errors.py  test_router.py  test_stats.py
tests/tools/: _mcp_stub_server.py  test_executor.py  test_mcp.py  test_mcp_e2e.py  test_spawn.py
tests/worker/: test_worker.py
